# shaders

./: Cargo.toml  README.md
assets/: red-cube.mtl
examples/: viewer.rs
graphics2d/: Cargo.toml  lib.rs
graphics2d/colored/: 120.glslf  120.glslv  120_webgl.glslv  150_core.glslf  150_core.glslv  150_core_webgl.glslf  150_core_webgl.glslv  mod.rs
graphics2d/textured/: 120.glslf  120.glslv  120_webgl.glslf  120_webgl.glslv  150_core.glslf  150_core.glslv  150_core_webgl.glslf  150_core_webgl.glslv  mod.rs
graphics2d/textured_color/: 120.glslf  120.glslv  120_webgl.glslf  120_webgl.glslv  150_core.glslf  150_core.glslv  150_core_webgl.glslf  150_core_webgl.glslv  mod.rs
src/: lib.rs
