[package]

name = "shaders"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["shaders", "3D", "piston"]
description = "Shaders for game development in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/shaders.git"
homepage = "https://github.com/PistonDevelopers/shaders"

[lib]

name = "shaders"
path = "src/lib.rs"

[dev-dependencies.geometry]
git = "https://github.com/pistondevelopers/geometry"

[dev-dependencies.start_piston]
git = "https://github.com/bvssvni/start_piston"
features = ["include_gfx_sdl2"]

[dev-dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dev-dependencies.shader_version]
git = "https://github.com/pistondevelopers/shader_version"

