[package]

name = "piston-shaders"
version = "0.3.1"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["shaders", "3D", "piston"]
description = "Shaders for game development in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/shaders.git"
homepage = "https://github.com/PistonDevelopers/shaders"

[lib]

name = "shaders"
path = "src/lib.rs"

[dependencies.piston-shaders_graphics2d]
path = "graphics2d"
version = "0.3.1"
