[package]

name = "piston-shaders_graphics2d"
version = "0.3.1"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["shaders", "2D", "graphics", "piston"]
description = "Shaders for 2D graphics in Rust"
license = "MIT"
repository = "https://github.com/PistonDevelopers/shaders.git"
homepage = "https://github.com/PistonDevelopers/shaders"

[lib]
name = "shaders_graphics2d"
path = "lib.rs"
